# dnsvisor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  browse.zsh
.github/workflows/: rust.yml
examples/: basic-resolver.rs  resolver.rs
src/: cache.rs  error.rs  header.rs  lib.rs  main.rs  packet.rs  query.rs  question.rs  record.rs  resolver.rs  rr_fields.rs  socket.rs  util.rs
tests/: integration.rs  test_dns_query.rs  test_util.rs
